--- a/use_cases/style.css
+++ b/use_cases/style.css
@@ -1,3 +1,9 @@
-#root > div:nth-child(1) > div.withScreencast > div > div > div > section.main.st-emotion-cache-bm2z3a.ea3mdgi8 > div.block-container.st-emotion-cache-1jicfl2.ea3mdgi5 > div > div > div > div:nth-child(2) > div > div > div {
+//*[@id="root"]/div[1]/div[1]/div/div/div/section[2]/div[1]/div/div/div/div[4]/div/div/div {
     width: 25rem;
+}
+
+//*[@id="root"]/div[1]/div[1]/div/div/div/section[2]/div[1] {
+    padding-top: 20px;
+    padding-bottom: 0px;
+    padding-left: 0px;
 }
